# SIRENA

./: .buildinfo  .gitignore  .readthedocs.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SIRENA.html  SIRENAcommandline.html  SIRENAfunctions.html  configure.ac  genindex.html  index.html  installSIRENA.sh  objects.inv  search.html  searchindex.js  sirena-install.csh.in  sirena-install.sh.in  sphinx-reading-durations.json  versionSIRENA.h  zreferences.html
.doctrees/: SIRENA.doctree  SIRENAcommandline.doctree  SIRENAfunctions.doctree  environment.pickle  index.doctree  zreferences.doctree
.github/workflows/: documentation.yml
SIRENA/: README.txt  gennoisespec.cpp  integraSIRENA.cpp  integraSIRENA.h  log.cpp  log.h  pulseprocess.cpp  scheduler.cpp  scheduler.h  tasksSIRENA.cpp  tasksSIRENA.h  tesreconstruction.c  tesreconstruction.par  threadsafe_queue.h
SIRENA/PPfiles_modified/: teseventlist.c  teseventlist.h  testriggerfile.c
SIRENAthreading/: addFixTimePrecision.py  gennoisespec.cpp  gennoisespec.h  gennoisespec.par  genutils.cpp  inoututils.cpp  integraSIRENA.cpp  integraSIRENA.h  log.cpp  pulseprocess.cpp  scheduler.cpp  tasksSIRENA.cpp  tasksSIRENA.h  teseventlist.c  teseventlist.h  tesreconstruction.c  tesreconstruction.h  tesreconstruction.par  testriggerfile.c  versionSIRENA.h
SIRENAthreading/PPfiles_modified/: Makefile.am  teseventlist.c  testriggerfile.c
_sources/: SIRENA.rst.txt  SIRENAcommandline.rst.txt
doc/: .readthedocs.yaml  SIRENA.rst  SIRENAcommandline.rst  SIRENAfunctions.rst  conf.py  references.bib  requirements.txt
doc/_build/doctrees/: SIRENA.doctree  SIRENAcommandline.doctree  SIRENAfunctions.doctree  index.doctree  zreferences.doctree
doc/_build/html/: .buildinfo  SIRENA.html  SIRENAcommandline.html  SIRENAfunctions.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  zreferences.html
doc/images/: OPTloop_new.odg  intermediate.xcf
doc/sphinxext/: apigen.py  docscrape.py  docscrape_sphinx.py  hidden_code_block.py  inheritance_diagram.py  ipython_console_highlighting.py  numpydoc.py
docs/source/: SIRENA.rst  SIRENAfunctions.rst  conf.py  references.bib  requirements.in  requirements.txt
docs/source/images/: OPTloop2.odg  stream2triggers.xcf
libsirena/: CMakeLists.txt  genutils.cpp  genutils.h  initSIRENA.c  initSIRENA.h  inoututils.cpp  inoututils.h  integraSIRENA.cpp  integraSIRENA.h  log.cpp  log.h  pulseprocess.cpp  pulseprocess.h  scheduler.cpp  scheduler.h  tasksSIRENA.cpp  tasksSIRENA.h  versionSIRENA.h
libsixt/: genutils.cpp  genutils.h  initSIRENA.c  initSIRENA.h  integraSIRENA.cpp  integraSIRENA.h  pulseprocess.cpp  scheduler.cpp  scheduler.h  supercommit.py  tasksSIRENA.cpp  tasksSIRENA.h  teseventlist.c  testriggerfile.c  versionSIRENA.h
scripts/SIRENA/: README
test/: README.md  test_library_covar2E.py  test_library_optfilt.py  test_noise_spectrum.py  test_noise_spectrum_matrices.py  test_recons_mono_0pad_FULL.py  test_recons_mono_covar.py  test_recons_mono_intcovar.py  test_recons_pairs_optfilt_ns.py  test_recons_pairs_optfilt_wn.py
test/data/input/: README.md  config_xifu_50x30_v3_20240917.fits  config_xifu_50x30_v3_20240917.xml
test/data/input/piximpact/: mono2keV_5000p.piximpact  mono3keV_5000p.piximpact  mono4keV_5000p.piximpact  mono5keV_5000p.piximpact  mono6.0keV_5000p.piximpact  mono7keV_5000p.piximpact  pairs_3keV_6keV_sep3500samples.piximpact
test/data/output/: README.md
test/data/reference/: README.md  events_pairs_3keV_6keV_sep3500samples_optfilt_ns_reference_20240917.fits  events_pairs_3keV_6keV_sep3500samples_optfilt_wn_reference_20240917.fits  library_6keV_optfilt_ns_reference_20240917.fits  library_6keV_optfilt_wn_reference_20240917.fits  noise_spectrum_reference_20240917.fits
tools/: CMakeLists.txt  Makefile.am  tesreconstruction.c
tools/gennoisespec/: gennoisespec.cpp  gennoisespec.hpp  gennoisespec.par  tesreconstruction.par
tools/teslib/: teslib.c  teslib.h  teslib.par
tools/teslib/.deps/: tesreconstruction.Po
tools/teslib/.libs/: teslib
tools/tesrecons/: tesrecons.c  tesrecons.h  tesrecons.par
tools/tesrecons/.deps/: teslib.Po  tesrecons.Po
tools/tesrecons/.libs/: tesrecons
tools/tesreconstruction/: tesreconstruction.c  tesreconstruction.par
